# TP1-Mundial

./: .gitignore  CMakeLists.txt  archivos.cpp  archivos.h  constantes.h  funcionesAuxiliares.cpp  funcionesAuxiliares.h  funcionesEquipos.cpp  main.cpp  manejoMemoria.cpp  menu.cpp  menu.h  pais.h
src/: archivos.cpp  funcionesAuxiliares.cpp  funcionesEquipos.cpp  funcionesGrupos.cpp  main.cpp  manejoMemoria.cpp  menu.cpp
